# tag-tracker

./: .gitignore  CMakeLists.txt  README.md  camera_calibration.cpp  generate_checkerboard.cpp  generate_tags.cpp  main.cpp
calibration/print/: checkerboard.odt
include/: camera_calibration_helper.h  tag-tracker.h
marker/: marker0.odt
src/: camera_calibration_helper.cpp
